# AMAPVox

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.txt  NAMESPACE  NEWS.md  README.md  cran-comments.md  pom.xml  setversion.sh
R/: AMAPVox.R  AMAPVoxClasses.R  AMAPVoxGUI.R  AMAPVoxGenerics.R  AMAPVoxGetters.R  AMAPVoxVersionManager.R  Butterfly.R  Canopy.R  Classes.R  ComputeG.R  Crop.R  ExtinctionCoefficient.R  FillNA.R  Generics.R  Getters.R  Ground.R  Operators.R  PlantArea.R  PlantAreaDensity.R  PlotVoxelSpace.R  ReadVoxelSpace.R  RemoveButterfly.R  Run.R  Utils-voxel.R  VersionManager.R  WriteVoxelSpace.R
amapvox.canopy/: pom.xml
amapvox.canopy/src/test/resources/: directions.txt
amapvox.commons.format/: pom.xml
amapvox.commons.javafx/: pom.xml
amapvox.commons.math/: pom.xml
amapvox.commons.raster/: pom.xml
amapvox.commons.raytracing/: pom.xml
amapvox.commons.raytracing/src/main/java/: module-info.java
amapvox.commons.spds/: pom.xml
amapvox.commons.util/: pom.xml
amapvox.commons.util/src/main/java/: module-info.java
amapvox.core/: pom.xml
amapvox.core/src/main/java/: module-info.java
amapvox.gui/: pom.xml
amapvox.gui/src/main/java/: module-info.java
amapvox.gui/src/main/resources/: version.properties
amapvox.lidar.commons/: pom.xml
amapvox.lidar.converter/: pom.xml
amapvox.lidar.converter/src/assembly/: src.xml
amapvox.lidar.gridded/: pom.xml
amapvox.lidar.gui/: pom.xml
amapvox.lidar.jlas/: LICENSE  pom.xml
amapvox.lidar.jlas/native/LasZipLibrary/: readme.txt
amapvox.lidar.jlas/native/LasZipStatic/: LasZipStatic.pro
amapvox.lidar.jlas/src/main/java/: module-info.java
amapvox.lidar.laszip/: pom.xml
amapvox.lidar.laszip/native/: CMakeLists.txt  commands.txt
amapvox.lidar.laszip/native/src/: jlas_api.c  jlas_api.h
amapvox.lidar.riegl/: pom.xml
amapvox.lidar.riegl/src/main/java/: module-info.java
amapvox.main/: build_app_linux.sh  build_app_windows.bat  pom.xml
amapvox.main/src/assembly/: src.xml
amapvox.viewer3d/: .gitignore  pom.xml
inst/: CITATION
inst/extdata/: tls_sample.vox
java/: README.md  pom.xml
java/amapvox.canopy/: pom.xml
java/amapvox.canopy/src/main/java/: module-info.java
java/amapvox.canopy/src/test/resources/: gtheta_dart_erectophile.txt  gtheta_dart_extremophile.txt  gtheta_dart_horizontal.txt  gtheta_dart_plagiophile.txt  gtheta_dart_planophile.txt  gtheta_dart_two_beta_1.13_1.62.txt  gtheta_dart_vertical.txt
java/amapvox.commons.format/: pom.xml
java/amapvox.commons.format/src/main/java/: module-info.java
java/amapvox.commons.javafx/: pom.xml
java/amapvox.commons.javafx/src/main/java/: module-info.java
java/amapvox.commons.math/: pom.xml
java/amapvox.commons.math/src/main/java/: module-info.java
java/amapvox.commons.raster/: pom.xml
java/amapvox.commons.raster/src/main/java/: module-info.java
java/amapvox.commons.raytracing/: pom.xml
java/amapvox.commons.spds/: pom.xml
java/amapvox.commons.spds/src/main/java/: module-info.java
java/amapvox.commons.util/: pom.xml
java/amapvox.core/: pom.xml
java/amapvox.core/src/main/java/: module-info.java
java/amapvox.gui/: pom.xml
java/amapvox.gui/src/main/java/: module-info.java
java/amapvox.gui/src/main/resources/: log4j.properties
java/amapvox.lidar.commons/: pom.xml
java/amapvox.lidar.commons/src/main/java/: module-info.java
java/amapvox.lidar.converter/: build_app_linux.sh  build_app_windows.bat  jlink.txt  lidar-converter.readme  pom.xml
java/amapvox.lidar.converter/LASTools/: txt2las_README.txt
java/amapvox.lidar.converter/LASTools/linux/: txt2las64
java/amapvox.lidar.converter/src/main/resources/: version.properties
java/amapvox.lidar.gridded/: pom.xml
java/amapvox.lidar.gui/: pom.xml
java/amapvox.lidar.jlas/: .gitignore  pom.xml
java/amapvox.lidar.jlas/native/LasZipLibrary/: LasZipLibrary.pro  LasZipLibrary.pro.user.04d03dd  LasZipLibrary.pro.user.36fc8f7  lasziplibrary.cpp  lasziplibrary.h  readme.txt~
java/amapvox.lidar.jlas/native/LasZipStatic/: LasZipStatic.pro.user.18  LasZipStatic.pro.user.3.0-pre1  readme.txt
java/amapvox.lidar.laszip/: .gitignore  pom.xml
java/amapvox.lidar.laszip/native/: CMakeLists.txt  commands.txt
java/amapvox.lidar.laszip/native/src/: jlas_api.c  jlas_api.h
java/amapvox.lidar.riegl/: .gitignore  pom.xml
java/amapvox.lidar.riegl/native/: CMakeLists.txt  commands.txt
java/amapvox.lidar.riegl/native/src/: mypointcloud.cpp  mypointcloud.h  rivliblibrary.cpp  rivliblibrary.h
java/amapvox.main/: build_app_windows.bat  pom.xml
java/amapvox.viewer3d/: pom.xml
man/: AMAPVox.Rd  Extract.Rd  VoxHeader-class.Rd  VoxelSpace-class.Rd  butterfly.Rd  canopy.Rd  clear.Rd  computeG.Rd  crop.Rd  dim.Rd  fillNA.Rd  getLocalVersions.Rd  getMaxCorner.Rd  getMinCorner.Rd  getParameter.Rd  getPosition.Rd  getRemoteVersions.Rd  getResolution.Rd  getVoxelSize.Rd  ground.Rd  gui.Rd  installVersion.Rd  is.VoxelSpace.Rd  merge.Rd  plantAreaDensity.Rd  plantAreaIndex.Rd  plot-VoxelSpace-ANY-method.Rd  plot-VoxelSpace-method.Rd  plot.Rd  plotG.Rd  readVoxelSpace.Rd  removeButterfly.Rd  removeVersion.Rd  run.Rd  show.Rd  toRaster.Rd  tools.Rd  writeVoxelSpace.Rd
maven-repository/ch/systemsx/sis-base/: maven-metadata.xml.sha1
maven-repository/ch/systemsx/sis-jhdf5/: maven-metadata.xml
vignettes/: AMAPVox.Rmd  Installation.Rmd  Publications.Rmd  Voxelization.Rmd  amapvox-gui.Rmd
vignettes/rsc/: amapvox-bibtex.bib
(+531 files in other folders)
